--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "single_page_application",
   "version": "1.0.0",
+  "homepage": "http://228SxS228.github.io/single_page_application",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,6 +21,7 @@
     "webpack-dev-server": "^4.9.3"
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "webpack-cli": "^4.10.0"
   }
 }
